# frcobot_ros2-3.0.0_RobotV3.8.6

fairino_bringup/: CMakeLists.txt  package.xml
fairino_bringup/config/: robot_description.urdf.xacro  ros2_controllers.yaml
fairino_bringup/launch/: real_robot.launch.py
fairino_hardware/include/fairino_hardware/: command_server.hpp  data_type_def.h  fairino_hardware_interface.hpp
fairino_hardware/libfairino/lib/: libfairino.so.2
fairino_hardware/src/: command_server.cpp  fairino_hardware_interface.cpp
