<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fairino_bringup</name>
  <version>0.1.0</version>
  <description>Bringup package for running Fairino robot hardware with ros2_control.</description>
  <maintainer email="fr@todo.todo">fr</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>xacro</exec_depend>

  <exec_depend>fairino_hardware</exec_depend>
  <exec_depend>fairino_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
